feat: implement logic for tokens refresh
